--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                         
                         <div class="bg-gray-50 rounded overflow-hidden shadow-sm hover:shadow-md transition-shadow">
                             <div class="h-64 overflow-hidden">
-                                <img src="https://i.pinimg.com/564x/cf/62/96/cf6296d686374294a039335e27f9060a.jpg" alt="Максим Волков" class="w-full h-full object-cover object-top">
+                                <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSQhcohtkYcil0M_q2aw3OJeEOqaAtBk9xEveab6g_VQntUn7V4" alt="Максим Волков" class="w-full h-full object-cover object-top">
                             </div>
                             <div class="p-6">
                                 <h3 class="text-xl font-semibold mb-1">Максим Волков</h3>
